// Copyright (c) The Thanos Authors.
// Licensed under the Apache License 2.0.

syntax = "proto3";
package thanos;

import "store/storepb/types.proto";

option go_package = "metadatapb";

service Metadata {
  rpc MetricMetadata(MetricMetadataRequest) returns (stream MetricMetadataResponse);
}

message MetricMetadataRequest {
  string metric = 1;
  int32 limit = 2;
  PartialResponseStrategy partial_response_strategy = 3;
}

message MetricMetadataResponse {
  oneof result {
    /// A collection of metric metadata entries.
    MetricMetadata metadata = 1;

    /// warning is considered an information piece in place of series for warning purposes.
    /// It is used to warn metadata API users about suspicious cases or partial response (if enabled).
    string warning = 2;
  }
}

message MetricMetadata {
  map<string, MetricMetadataEntry> metadata = 1;
}

message MetricMetadataEntry {
  repeated Meta metas = 2 ;
}

message Meta {
  // @gotags: json:"type"
  string type = 1;
  // @gotags: json:"help"
  string help = 2;
  // @gotags: json:"unit"
  string unit = 3;
}
